--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "docker-cors-anywhere",
   "version": "1.0.0",
   "main": "index.js",
+  "homepage": ".",
   "license": "MIT",
   "scripts": {
     "start": "node index"
